added window classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,11 +106,12 @@ set(COMMON_DIR ${CMAKE_CURRENT_SOURCE_DIR}/common)
 
 set(ALL_LIBS ${OPENGL_LIBRARY} ${GLEW_LIBRARIES} ${GLFW_LIBRARIES} ${FLTK_LIBRARIES})
 set(LINK_DIRS ${GLEW_LINK_DIRS} ${GLFW_LINK_DIRS} ${FLTK_LINK_DIRS})
-set(INCLUDE_DIRS ${GLEW_INCLUDE_DIRS} ${GLFW_INCLUDE_DIRS} ${COMMON_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${FLTK_INCLUDE_DIRS})
-
-set_directory_properties(PROPERTIES COMPILE_DEFINITIONS SHOW_MESSAGE=1)
+set(INCLUDE_DIRS ${GLEW_INCLUDE_DIRS} ${GLFW_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${FLTK_INCLUDE_DIRS})
 
 configure_file(${COMMON_DIR}/cg_config.h.in cg_config.h)
+
+add_subdirectory(${COMMON_DIR})
+set(ALL_LIBS ${ALL_LIBS} common)
 
 if (${BUILD_LAB1})
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lab1)
