--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -1,9 +1,12 @@
 ﻿set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
+set(UI_DIR "${CMAKE_CURRENT_SOURCE_DIR}/ui")
 set(INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
 
-add_executable (lab1
+add_library(common
 	"${SRC_DIR}/shader_program.cpp"
 	"${SRC_DIR}/utils.cpp"
+	"${UI_DIR}/gl_window.cpp"
+	"${UI_DIR}/main_window.cpp"
 )
 
 target_include_directories(common PRIVATE ${INCLUDE_DIRS} ${INCLUDE_DIR})
