fix fltk build with zlib version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ set_option(USE_GLEW ON BOOL "Build project with GLEW")
 set_option(USE_FLTK ON BOOL "Build project with FLTK")
 set_option(USE_GLFW OFF BOOL "Build project with GLFW")
 set_option(USE_GLAD OFF BOOL "Build project with GLAD")
-set_option(USE_OLD_OPENGL OFF BOOL "Build project with old OpenGL (older than 3.3)")
+set_option(USE_OLD_OPENGL OFF BOOL "Build project with old OpenGL (older than 3.0)")
 
 set_option(BUILD_LAB1 ON BOOL "Build lab1")
 
@@ -37,6 +37,7 @@ endif()
 if (${USE_FLTK})
     set(FLTK_BUILD_FLUID OFF)
     set(FLTK_BUILD_TEST OFF)
+    set(OPTION_USE_SYSTEM_ZLIB OFF)
     set(OPTION_USE_SVG OFF)
     set(OPTION_USE_WAYLAND OFF)
     set(OPTION_PRINT_SUPPORT OFF)
