--- a/lab1/CMakeLists.txt
+++ b/lab1/CMakeLists.txt
@@ -3,6 +3,7 @@ set(INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
 add_executable (lab1
 	"${SRC_DIR}/main.cpp"
+	"${SRC_DIR}/controls.cpp"
 )
 
 target_include_directories(lab1 PRIVATE ${INCLUDE_DIRS} ${INCLUDE_DIR})
