--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,11 +25,12 @@ set_option(USE_FLTK ON BOOL "Build project with FLTK")
 set_option(USE_GLFW OFF BOOL "Build project with GLFW")
 set_option(USE_GLAD OFF BOOL "Build project with GLAD")
 set_option(USE_GLM ON BOOL "Build project with glm")
-set_option(USE_OLD_OPENGL OFF BOOL "Build project with old OpenGL (older than 3.0)")
+set_option(USE_OLD_OPENGL OFF BOOL "Build project with old OpenGL (older than 3.1)")
 
 set_option(BUILD_LAB1_2 ON BOOL "Build lab1 and lab2")
 set_option(BUILD_LAB3 ON BOOL "Build lab3")
 set_option(BUILD_LAB4 ON BOOL "Build lab4")
+set_option(BUILD_LAB5 ON BOOL "Build lab5")
 
 set(BUILD_SHARED_LIBS OFF)
 
@@ -133,4 +134,7 @@ if (${BUILD_LAB3})
 endif()
 if (${BUILD_LAB4})
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lab4)
+endif()
+if (${BUILD_LAB5})
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lab5)
 endif()
