--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ set_option(BUILD_LAB1_2 ON BOOL "Build lab1 and lab2")
 set_option(BUILD_LAB3 ON BOOL "Build lab3")
 set_option(BUILD_LAB4 ON BOOL "Build lab4")
 set_option(BUILD_LAB5 ON BOOL "Build lab5")
+set_option(BUILD_LAB6 ON BOOL "Build lab6")
 
 set(BUILD_SHARED_LIBS OFF)
 
@@ -137,4 +138,7 @@ if (${BUILD_LAB4})
 endif()
 if (${BUILD_LAB5})
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lab5)
+endif()
+if (${BUILD_LAB6})
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lab6)
 endif()
