added base controls for lab7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ set_option(BUILD_LAB3 ON BOOL "Build lab3")
 set_option(BUILD_LAB4 ON BOOL "Build lab4")
 set_option(BUILD_LAB5 ON BOOL "Build lab5")
 set_option(BUILD_LAB6 ON BOOL "Build lab6")
+set_option(BUILD_LAB7 ON BOOL "Build lab7")
 
 set(BUILD_SHARED_LIBS OFF)
 
@@ -65,7 +66,7 @@ if (${USE_FLTK})
     FetchContent_MakeAvailable(FLTK)
     set(FLTK_INCLUDE_DIRS ${fltk_SOURCE_DIR} ${fltk_BINARY_DIR})
     set(FLTK_LINK_DIRS ${fltk_BINARY_DIR}/lib)
-    set(FLTK_LIBRARIES fltk fltk_gl)
+    set(FLTK_LIBRARIES fltk fltk_gl fltk_images)
 endif()
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
     # For OpenGL we need to install libraries:
@@ -141,4 +142,7 @@ if (${BUILD_LAB5})
 endif()
 if (${BUILD_LAB6})
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lab6)
+endif()
+if (${BUILD_LAB7})
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lab7)
 endif()
